add responsiveness to navbar

--- a/index.html
+++ b/index.html
@@ -37,13 +37,13 @@
     <header class="bg-info">
       <div class="container-md">
         <div class="row">
-          <div class=" col-sm-6 text-nowrap">
+          <div class=" col-sm-6 ">
             <h3 class="col-12 my-0">KEVIN WHITE</h3>
             <h4 class="col-12 fw-normal">Freelance Website/Game Developer</h4>
           </div>
           
           
-          <div class="col-4 d-none d-md-flex offset-lg-2 offset-md-1  nav flex-nowrap align-self-center nav-justified">
+          <div class="col-6 d-none d-sm-flex nav flex-nowrap align-self-center justify-content-end ">
             <a class="nav-link" href="#">ABOUT</a>
             <a class="nav-link" href="#">PORTFOLIO</a>
             <a class="nav-link" href="#">CONTACT</a>
@@ -59,22 +59,16 @@
     </header>
 
     <div class="container">
-      <article class="homepage-profile">
-        <img
-          src="images/myAvatar.png"
-          class="home-img"
-          alt="missing"
-          height="150"
-          width="150"
-        />
-        <p class="home-p">
+      <div class="row">
+        <img src="images/myAvatar.png" class="col-2" id="avatar" alt="avatar"/>
+        <p class="col-10">
           <!--  I am a aspiring game developer and Front-end HTML5 website developer. I have been working as an independent developer for the last 6 years. I have experience working with development teams in Website development as well as Game development.  -->
           Motivated and skilled Developer/Information technology freelancer.
           Having Years of experience in developing Websites, Applications, Game
           applications. I'm also an experienced Indie Game Developer with
           several game projects under my belt.
         </p>
-      </article>
+      </div>
 
       <!--demo http://ianlunn.co.uk/about/#wordpress-developer-->
 
