adjust avatar/text center and make avatar/text responsive

--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
     </header>
 
     <div class="container">
-      <div class="row">
-        <img src="images/myAvatar.png" class="col-2" id="avatar" alt="avatar"/>
-        <p class="col-10">
+      <div class="row justify-content-center py-3">
+        <img src="images/myAvatar.png" class="col-4" id="avatar" alt="avatar"/>
+        <p class="col-8">
           <!--  I am a aspiring game developer and Front-end HTML5 website developer. I have been working as an independent developer for the last 6 years. I have experience working with development teams in Website development as well as Game development.  -->
           Motivated and skilled Developer/Information technology freelancer.
           Having Years of experience in developing Websites, Applications, Game
