add javascript file

--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
     />
 
     <link rel="stylesheet" type="text/css" href="custom.css" />
-
+    <script src="javaScript.js"></script>
+    
     <script>
       (function (i, s, o, g, r, a, m) {
         i["GoogleAnalyticsObject"] = r;
@@ -48,7 +49,16 @@
             <h4 class="col-12 fw-normal">Freelance Website/Game Developer</h4>
           </div>
 
-          <div class="col-6 d-none d-sm-flex nav flex-nowrap align-self-center justify-content-end">
+          <div
+            class="
+              col-6
+              d-none d-sm-flex
+              nav
+              flex-nowrap
+              align-self-center
+              justify-content-end
+            "
+          >
             <a class="nav-link" href="#">ABOUT</a>
             <a class="nav-link" href="#">PORTFOLIO</a>
             <a class="nav-link" href="#">CONTACT</a>
@@ -141,7 +151,7 @@
           </div>
         </div>
       </article>
-      
+
       <p class="homepage-p">
         I strive to make the highest quality responsive Websites possible. I
         ensure that all of my projects are well designed and easily
