--- a/index.html
+++ b/index.html
@@ -41,21 +41,29 @@
   </head>
 
   <body>
-    <header class="bg-info">      
-        <div class="container-md">
-          <div class="row fixed-top bg-info ">
-            <div class="col-sm-6">
-              <h3 class="col-12 my-0">KEVIN WHITE</h3>
-              <h4 class="col-12 fw-normal">Freelance Website/Game Developer</h4>
-            </div>
-            <div class="col-6 d-none d-sm-flex nav flex-nowrap align-self-center justify-content-end">
-              <a class="nav-link" href="#">ABOUT</a>
-              <a class="nav-link" href="#">PORTFOLIO</a>
-              <a class="nav-link" href="#">CONTACT</a>
-            </div>
+    <header class="bg-info">
+      <div class="container-md">
+        <div class="row fixed-top bg-info">
+          <div class="col-sm-6">
+            <h3 class="col-12 my-0">KEVIN WHITE</h3>
+            <h4 class="col-12 fw-normal">Freelance Website/Game Developer</h4>
+          </div>
+          <div
+            class="
+              col-6
+              d-none d-sm-flex
+              nav
+              flex-nowrap
+              align-self-center
+              justify-content-end
+            "
+          >
+            <a class="nav-link" href="#">ABOUT</a>
+            <a class="nav-link" href="#portfolio">PORTFOLIO</a>
+            <a class="nav-link" href="#contact">CONTACT</a>
           </div>
         </div>
-      
+      </div>
 
       <div class="bg-info text-center about-header">
         <h1>About Kevin</h1>
@@ -83,26 +91,34 @@
         </p>
         <p class="homepage-p">
           I find that the attention to detail comes into play when building
-          Websites as well as Game development. Knowledge and experience is needed
-          to make a responsive website look professional and knowing how to place
-          elements is a must. I am very comfortable with both, placing elements
-          and moving elements around.
+          Websites as well as Game development. Knowledge and experience is
+          needed to make a responsive website look professional and knowing how
+          to place elements is a must. I am very comfortable with both, placing
+          elements and moving elements around.
         </p>
       </div>
       <!--demo http://ianlunn.co.uk/about/#wordpress-developer-->
       <article class="row">
-        <h3>PORTFOLIO</h3>
+        <h3 id="portfolio">PORTFOLIO</h3>
         <div class="card col-sm-12 col-md-4">
           <div class="slides-container carousel slide" data-bs-ride="carousel">
-            <div class="carousel-inner">              
-              <div class="carousel-item active"><img id="cardImg1" src="images/capture.jpg"/> </div>
-              <div class="carousel-item "><img id="cardImg1" src="images/capture.jpg"/> </div>
-              <div class="carousel-item "><img id="cardImg1" src="images/capture.jpg"/> </div>
-              <div class="carousel-item "><img id="cardImg1" src="images/capture.jpg"/> </div>              
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img id="cardImg1" src="images/capture.jpg" />
+              </div>
+              <div class="carousel-item">
+                <img id="cardImg1" src="images/capture.jpg" />
+              </div>
+              <div class="carousel-item">
+                <img id="cardImg1" src="images/capture.jpg" />
+              </div>
+              <div class="carousel-item">
+                <img id="cardImg1" src="images/capture.jpg" />
+              </div>
             </div>
           </div>
           <div class="card-body">
-            <h5 class="card-title">Card title</h5>
+            <h5 class="card-title">15thmeu.com</h5>
             <p class="card-text">
               Some quick example text to build on the card title and make up the
               bulk of the card's content.
@@ -116,13 +132,13 @@
             muted=""
             autoplay=""
             poster="img/videoframe.jpg"
-            class="slides-container"
+            class=""
             data-video="0"
           >
             <source src="videos\TTSTrailer.mp4" type="video/mp4" />
           </video>
           <div class="card-body">
-            <h5 class="card-title">Card title</h5>
+            <h5 class="card-title">text to speech</h5>
             <p class="card-text">
               Some quick example text to build on the card title and make up the
               bulk of the card's content.
@@ -131,17 +147,33 @@
           </div>
         </div>
         <div class="card col-sm-12 col-md-4">
-
           <div class="slides-container carousel slide" data-bs-ride="carousel">
-
             <div class="carousel-inner">
-              <div class="carousel-item active"><img class="cardImg3" src="images/c-sharp.jpg" alt="Card image cap" /></div>
-              <div class="carousel-item "><img class="cardImg3" src="images/c-sharp.jpg" alt="Card image cap" /></div>
-              <div class="carousel-item "><img class="cardImg3" src="images/c-sharp.jpg" alt="Card image cap" /></div>
+              <div class="carousel-item active">
+                <img
+                  class="cardImg3"
+                  src="images/c-sharp.jpg"
+                  alt="Card image cap"
+                />
+              </div>
+              <div class="carousel-item">
+                <img
+                  class="cardImg3"
+                  src="images/c-sharp.jpg"
+                  alt="Card image cap"
+                />
+              </div>
+              <div class="carousel-item">
+                <img
+                  class="cardImg3"
+                  src="images/c-sharp.jpg"
+                  alt="Card image cap"
+                />
+              </div>
             </div>
           </div>
           <div class="card-body">
-            <h5 class="card-title">Card title</h5>
+            <h5 class="card-title">World Star Hiphop clone</h5>
             <p class="card-text">
               Some quick example text to build on the card title and make up the
               bulk of the card's content.
@@ -150,8 +182,6 @@
           </div>
         </div>
       </article>
-
-     
 
       <h1>Skills</h1>
 
@@ -218,33 +248,20 @@
       ></script>
     </div>
 
-    <footer>
-      <div class="footer-content-wrapper">
-        <div class="footer-profile">
-          <div class="footer-avatar">
-            <img src="images/myAvatar.png" width="70" height="70" />
-          </div>
-
-          <div class="footer-bio-info">
-            <p>
-              I am a aspiring game developer and Front-end HTML5 website
-              developer. I have been working as an independent developer for the
-              last 6 years. I have experience working with development teams in
-              Website development as well as Game development.
+    <footer id="contact">
+      <div class="footer-wrapper container">        
+        <div class="row">
+          <div class="footer-bio-info row col-6 ">
+            <p class="col-12">
+              <img src="images/myAvatar.png" width="70" height="70" />
+              I am a aspiring game developer and Front-end HTML5 website developer.
+              I have been working as an independent developer for the last 6 years.
+              I have experience working with development teams in Website
+              development as well as Game development.
             </p>
-            <h4>
-              Available May 2017.
-              <a
-                href="https://www.linkedin.com/in/kevin-white-5816ab4a/
-"
-                >Hire Now</a
-              >
-            </h4>
+            <h5 class="d-flex justify-content-end">Available May 2017.<a href="https://www.linkedin.com/in/kevin-white-5816ab4a/">Hire Now</a></h1>
           </div>
-        </div>
-
-        <div class="footer-social-media">
-          <ul>
+          <ul class="col">
             <li>
               <p class="social-media-img">
                 <img src="images\github-img.png" width="50" height="50" />
@@ -253,12 +270,10 @@
                 <h2 class="social-media-h2">View my Github</h2>
               </a>
             </li>
-
             <li>
               <p class="social-media-img">
                 <img src="images\Linkedin-icon.png" width="50" height="50" />
               </p>
-
               <a href="https://www.linkedin.com/in/kevin-white-5816ab4a/">
                 <h2 class="social-media-h2">View my LinkIn</h2>
               </a>
