--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
   </head>
 
   <body>
-    <header class="bg-info">
+    <header id="about" class="bg-info">
       <div class="container-md">
         <div class="row fixed-top bg-info">
           <div class="col-sm-6">
@@ -58,7 +58,7 @@
               justify-content-end
             "
           >
-            <a class="nav-link" href="#">ABOUT</a>
+            <a class="nav-link" href="#about">ABOUT</a>
             <a class="nav-link" href="#portfolio">PORTFOLIO</a>
             <a class="nav-link" href="#contact">CONTACT</a>
           </div>
@@ -251,34 +251,33 @@
     <footer id="contact">
       <div class="footer-wrapper container">        
         <div class="row">
-          <div class="footer-bio-info row col-6 ">
-            <p class="col-12">
-              <img src="images/myAvatar.png" width="70" height="70" />
-              I am a aspiring game developer and Front-end HTML5 website developer.
-              I have been working as an independent developer for the last 6 years.
-              I have experience working with development teams in Website
-              development as well as Game development.
-            </p>
-            <h5 class="d-flex justify-content-end">Available May 2017.<a href="https://www.linkedin.com/in/kevin-white-5816ab4a/">Hire Now</a></h1>
+          <div class="footer-bio-info row col-8 ">
+            <div class="col-12 row d-flex justify-content-end">
+              <img class="col-4" id="footer-avatar" src="images/myAvatar.png"/>
+              <p class="col-8">I am a aspiring game developer and Front-end HTML5 website developer.
+                I have been working as an independent developer for the last 6 years.
+                I have experience working with development teams in Website
+                development as well as Game development.
+              </p>
+              <h5 class="col-12 d-flex justify-content-end">Available July 2021.<a href="https://www.linkedin.com/in/kevin-white-5816ab4a/">Hire Now</a></h1>
+            </div>
           </div>
-          <ul class="col">
-            <li>
-              <p class="social-media-img">
-                <img src="images\github-img.png" width="50" height="50" />
-              </p>
-              <a href="https://github.com/Coderkoss">
-                <h2 class="social-media-h2">View my Github</h2>
-              </a>
-            </li>
-            <li>
-              <p class="social-media-img">
-                <img src="images\Linkedin-icon.png" width="50" height="50" />
-              </p>
-              <a href="https://www.linkedin.com/in/kevin-white-5816ab4a/">
-                <h2 class="social-media-h2">View my LinkIn</h2>
-              </a>
-            </li>
-          </ul>
+          <!--social media section-->
+          <div class="col-4 row">
+                  <div class="row align-self-center" >
+                    <img class="col-12 col-sm-4  social-img" src="images\github-img.png" />
+                    <a  class="col-12 col-sm-8" href="https://github.com/Coderkoss">
+                      <h5 >View my Github</h5>
+                    </a>
+                  </div>
+                  <!--sepration-->
+                  <div class="row align-self-center">
+                    <img class="col-12 col-sm-4 social-img" src="images\Linkedin-icon.png" />
+                    <a class="col-12 col-sm-8" href="https://www.linkedin.com/in/kevin-white-5816ab4a/">
+                      <h5 >View my LinkIn</h5>
+                    </a>
+                  </div>          
+          </div>
         </div>
       </div>
     </footer>
