update Header spacing for large resolutions

--- a/index.html
+++ b/index.html
@@ -42,25 +42,18 @@
 
   <body>
     <header id="about" class="bg-info">
-      <div class="container-md">
-        <div class="row fixed-top bg-info">
-          <div class="col-sm-6">
-            <h3 class="col-12 my-0">KEVIN WHITE</h3>
-            <h4 class="col-12 fw-normal">Freelance Website/Game Developer</h4>
+      <!-- Start of Fixed container -->
+      <div class="fixed-top bg-info">
+        <div class="row container-fliud">
+          <div class="col-sm-7  px-3 d-flex flex-column mx-auto">
+            <h3 class=" my-0 mx-xxl-auto">KEVIN WHITE</h3>
+            <h4 class=" fw-normal mx-xxl-auto">Freelance Website/Game Developer</h4>
           </div>
-          <div
-            class="
-              col-6
-              d-none d-sm-flex
-              nav
-              flex-nowrap
-              align-self-center
-              justify-content-end
-            "
-          >
-            <a class="nav-link" href="#about">ABOUT</a>
-            <a class="nav-link" href="#portfolio">PORTFOLIO</a>
-            <a class="nav-link" href="#contact">CONTACT</a>
+
+          <div class="col-sm-5  d-none d-sm-flex nav flex-nowrap align-self-center justify-content-end justify-content-xxl-center">
+            <a class="nav-link " href="#about">ABOUT</a>
+            <a class="nav-link " href="#portfolio">PORTFOLIO</a>
+            <a class="nav-link " href="#contact">CONTACT</a>
           </div>
         </div>
       </div>
@@ -70,8 +63,8 @@
         <p>Producing high-quality websites and exceptional user experience</p>
       </div>
     </header>
-
-    <div class="container">
+<!-- Main Body Content Section should change to resposive container-fliud -->
+    <div class="container-sm ">
       <div class="row justify-content-center py-3">
         <img src="images/myAvatar.png" class="col-4" id="avatar" alt="avatar" />
         <p class="col-8">
@@ -82,7 +75,7 @@
           several game projects under my belt.
         </p>
       </div>
-      <div class="row discription">
+      <div class="row discription ">
         <p class="homepage-p">
           I strive to make the highest quality responsive Websites possible. I
           ensure that all of my projects are well designed and easily
