--- a/index.html
+++ b/index.html
@@ -65,9 +65,9 @@
     </header>
 <!-- Main Body Content Section should change to resposive container-fliud -->
     <div class="container-sm ">
-      <div class="row justify-content-center py-3">
-        <img src="images/myAvatar.png" class="col-4" id="avatar" alt="avatar" />
-        <p class="col-8">
+      <div class="row justify-content-xxl-center no-wrap py-3">
+        <img src="images/myAvatar.png" class="col-sm-4 col-2" id="avatar" alt="avatar" />
+        <p class="col-sm-8 col-10 ">
           <!--  I am a aspiring game developer and Front-end HTML5 website developer. I have been working as an independent developer for the last 6 years. I have experience working with development teams in Website development as well as Game development.  -->
           Motivated and skilled Developer/Information technology freelancer.
           Having Years of experience in developing Websites, Applications, Game
@@ -143,7 +143,7 @@
           <div class="slides-container carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img
+                <imghttps://www.google.com/search?channel=fs&client=ubuntu&q=5501
                   class="cardImg3"
                   src="images/c-sharp.jpg"
                   alt="Card image cap"
