fix all elements down to ClipBoard Speaker

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       <!-- Start of Fixed container -->
       <div class="fixed-top bg-info">
         <div class="row container-fliud">
-          <div class="col-sm-7  px-3 d-flex flex-column mx-auto">
+          <div class="col-sm-7 d-flex flex-column justify-content-center">
             <h3 class=" my-0 mx-xxl-auto">KEVIN WHITE</h3>
             <h4 class=" fw-normal mx-xxl-auto">Freelance Website/Game Developer</h4>
           </div>
@@ -63,16 +63,13 @@
         <p>Producing high-quality websites and exceptional user experience</p>
       </div>
     </header>
-<!-- Main Body Content Section should change to resposive container-fliud -->
+<!-- Main Body Content Section should change to responsive container-fluid -->
     <div class="container-sm ">
-      <div class="row justify-content-xxl-center no-wrap py-3">
-        <img src="images/myAvatar.png" class="col-sm-4 col-2" id="avatar" alt="avatar" />
-        <p class="col-sm-8 col-10 ">
-          <!--  I am a aspiring game developer and Front-end HTML5 website developer. I have been working as an independent developer for the last 6 years. I have experience working with development teams in Website development as well as Game development.  -->
-          Motivated and skilled Developer/Information technology freelancer.
-          Having Years of experience in developing Websites, Applications, Game
-          applications. I'm also an experienced Indie Game Developer with
-          several game projects under my belt.
+      <div class="row justify-content-xxl-center align-items-center py-3">
+        <img src="images/myAvatar.png" class="col-4 img-reposive" id="avatar" alt="avatar" />
+        <p class="col-8">
+          Motivated and skilled Developer. Having Years of experience developing Websites, Applications,
+          Game applications. I'm also an experienced Indie Game Developer with several game projects under my belt.
         </p>
       </div>
       <div class="row discription ">
@@ -90,7 +87,7 @@
           elements and moving elements around.
         </p>
       </div>
-      <!--demo http://ianlunn.co.uk/about/#wordpress-developer-->
+      <!--Portfolio Section-->
       <article class="row">
         <h3 id="portfolio">PORTFOLIO</h3>
         <div class="card col-sm-12 col-md-4">
@@ -100,23 +97,22 @@
                 <img id="cardImg1" src="images/capture.jpg" />
               </div>
               <div class="carousel-item">
-                <img id="cardImg1" src="images/capture.jpg" />
+                <img id="cardImg2" src="images/capture1.jpg" />
               </div>
               <div class="carousel-item">
-                <img id="cardImg1" src="images/capture.jpg" />
+                <img id="cardImg3" src="images/capture2.jpg" />
               </div>
               <div class="carousel-item">
-                <img id="cardImg1" src="images/capture.jpg" />
+                <img id="cardImg4" src="images/capture3.jpg" />
               </div>
             </div>
           </div>
           <div class="card-body">
             <h5 class="card-title">15thmeu.com</h5>
             <p class="card-text">
-              Some quick example text to build on the card title and make up the
-              bulk of the card's content.
+            The 15thMeu Realism unit is a site built for one of the largest Arma 3 Gaming communities.  
             </p>
-            <a href="#" class="btn btn-primary">Go somewhere</a>
+            <a href="#" class="btn btn-primary">Site link</a>
           </div>
         </div>
         <div class="card col-sm-12 col-md-4">
@@ -131,35 +127,34 @@
             <source src="videos\TTSTrailer.mp4" type="video/mp4" />
           </video>
           <div class="card-body">
-            <h5 class="card-title">text to speech</h5>
+            <h5 class="card-title">ClipBoard speaker</h5>
             <p class="card-text">
-              Some quick example text to build on the card title and make up the
-              bulk of the card's content.
+              ClipBoard Speaker is an application developed using C# and the .Net Framework. The ClipBoard Speaker allows you to have a speech synthesizer read text out loud to you from the clipboard.
             </p>
-            <a href="#" class="btn btn-primary">Go somewhere</a>
+            <a href="#" class="btn btn-primary">Site link</a>
           </div>
         </div>
         <div class="card col-sm-12 col-md-4">
           <div class="slides-container carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <imghttps://www.google.com/search?channel=fs&client=ubuntu&q=5501
+                <img
                   class="cardImg3"
-                  src="images/c-sharp.jpg"
+                  src="images/wshhpage2.png"
                   alt="Card image cap"
                 />
               </div>
               <div class="carousel-item">
                 <img
                   class="cardImg3"
-                  src="images/c-sharp.jpg"
+                  src="images/wshhphone.png"
                   alt="Card image cap"
                 />
               </div>
               <div class="carousel-item">
                 <img
                   class="cardImg3"
-                  src="images/c-sharp.jpg"
+                  src="images/wshhresponsive.png"
                   alt="Card image cap"
                 />
               </div>
