add comments to portfolio and fix WSHH Card Text

--- a/index.html
+++ b/index.html
@@ -90,6 +90,7 @@
       <!--Portfolio Section-->
       <article class="row">
         <h3 id="portfolio">PORTFOLIO</h3>
+        <!--15thmeu Card Start-->
         <div class="card col-sm-12 col-md-4">
           <div class="slides-container carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
@@ -115,6 +116,8 @@
             <a href="#" class="btn btn-primary">Site link</a>
           </div>
         </div>
+        <!--15thmeu Card End-->
+        <!--ClipBoard Speaker Card Start-->
         <div class="card col-sm-12 col-md-4">
           <video
             loop=""
@@ -134,6 +137,8 @@
             <a href="#" class="btn btn-primary">Site link</a>
           </div>
         </div>
+        <!--ClipBoard Speaker Card End-->
+        <!--WSHH Card Start-->
         <div class="card col-sm-12 col-md-4">
           <div class="slides-container carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
@@ -163,12 +168,12 @@
           <div class="card-body">
             <h5 class="card-title">World Star Hiphop clone</h5>
             <p class="card-text">
-              Some quick example text to build on the card title and make up the
-              bulk of the card's content.
+              This website was made as part of my Web Developer Portfolio. The site is a WorldStar Hip Hop clone that is fully responsive. 
             </p>
-            <a href="#" class="btn btn-primary">Go somewhere</a>
+            <a href="#" class="btn btn-primary">Site link</a>
           </div>
         </div>
+        <!--WSHH Card End-->
       </article>
 
       <h1>Skills</h1>
