Change header background color to darkblue

--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html>
   <head>
@@ -41,9 +42,9 @@
   </head>
 
   <body>
-    <header id="about" class="bg-info">
+    <header id="about" class="">
       <!-- Start of Fixed container -->
-      <div class="fixed-top bg-info">
+      <div class="fixed-navbar fixed-top">
         <div class="row container-fliud">
           <div class="col-sm-7 d-flex flex-column justify-content-center">
             <h3 class=" my-0 mx-xxl-auto">KEVIN WHITE</h3>
@@ -58,7 +59,7 @@
         </div>
       </div>
 
-      <div class="bg-info text-center about-header">
+      <div class="text-center about-header">
         <h1>About Kevin</h1>
         <p>Producing high-quality websites and exceptional user experience</p>
       </div>
