--- a/index.html
+++ b/index.html
@@ -242,33 +242,33 @@
       ></script>
     </div>
 
-    <footer id="contact">
+    <footer>
       <div class="footer-wrapper container">        
         <div class="row">
-          <div class="footer-bio-info row col-8 ">
-            <div class="col-12 row d-flex justify-content-end">
-              <img class="col-4" id="footer-avatar" src="images/myAvatar.png"/>
-              <p class="col-8">I am a aspiring game developer and Front-end HTML5 website developer.
+          <div class="col-12 col-sm-8 text-right">
+            <div class="row justify-content-sm-end">
+              <img class="col-5"  id="footer-avatar" src="images/myAvatar.png"/>
+              <p class="col-7">I am a aspiring game developer and Front-end HTML5 website developer.
                 I have been working as an independent developer for the last 6 years.
                 I have experience working with development teams in Website
                 development as well as Game development.
               </p>
-              <h5 class="col-12 d-flex justify-content-end">Available July 2021.<a href="https://www.linkedin.com/in/kevin-white-5816ab4a/">Hire Now</a></h1>
+              <h5 class="justify-content-end text-sm-end" >Available July 2021.<a href="https://www.linkedin.com/in/kevin-white-5816ab4a/">Hire Now</a></h1>
             </div>
           </div>
           <!--social media section-->
-          <div class="col-4 row">
-                  <div class="row align-self-center" >
-                    <img class="col-12 col-sm-4  social-img" src="images\github-img.png" />
-                    <a  class="col-12 col-sm-8" href="https://github.com/Coderkoss">
+          <div class="text-center text-sm-left col-12 col-sm-3">
+                  <div  >
+                    <img class="social-img" src="images\github-img.png" />
+                    <a   href="https://github.com/Coderkoss">
                       <h5 >View my Github</h5>
                     </a>
                   </div>
                   <!--sepration-->
-                  <div class="row align-self-center">
-                    <img class="col-12 col-sm-4 social-img" src="images\Linkedin-icon.png" />
-                    <a class="col-12 col-sm-8" href="https://www.linkedin.com/in/kevin-white-5816ab4a/">
-                      <h5 >View my LinkIn</h5>
+                  <div >
+                    <img class="social-img"  src="images\Linkedin-icon.png" />
+                    <a  href="https://www.linkedin.com/in/kevin-white-5816ab4a/">
+                      <h5 >View my LinkedIn</h5>
                     </a>
                   </div>          
           </div>
