update discription text

--- a/index.html
+++ b/index.html
@@ -69,8 +69,9 @@
       <div class="row justify-content-xxl-center align-items-center py-3">
         <img src="images/myAvatar.png" class="col-4 img-reposive" id="avatar" alt="avatar" />
         <p class="col-8">
-          Motivated and skilled Developer. Having Years of experience developing Websites, Applications,
-          Game applications. I'm also an experienced Indie Game Developer with several game projects under my belt.
+          Hello, my name is Kevin White a motivated and skilled software engineer. I have years of experience developing websites,
+           applications, game tools, and games. I have a bachelor's degree in Computer Science. I'm a former 
+           welder that shifted my career in the direction of computers my real passion.      
         </p>
       </div>
       <div class="row discription ">
